# kodegen-tools-filesystem

./: Cargo.toml  EXTRACTION_SESSION_LOG.md  README.md  TEST_EXTRACTION_INVENTORY.md
examples/: direct_search_advanced.rs  direct_search_basics.rs  direct_search_files.rs  direct_search_output.rs  direct_search_patterns.rs  filesystem_demo.rs
examples/common/: mod.rs
src/: create_directory.rs  delete_directory.rs  delete_file.rs  edit_block.rs  get_file_info.rs  lib.rs  list_directory.rs  main.rs  move_file.rs  read_file.rs  read_multiple_files.rs  validation.rs  write_file.rs
src/edit_block/: char_analysis.rs  edit_log.rs  fuzzy_search.rs  line_endings.rs  mod.rs  suggestions.rs
src/search/: fs_search.rs  get_more_results.rs  get_results.rs  list_searches.rs  mod.rs  registry.rs  session.rs  sorting.rs  start_search.rs  stop_search.rs  types.rs
src/search/manager/: config.rs  content_search.rs  context.rs  core.rs  file_search.rs  files_mode.rs  mod.rs  utils.rs
src/search/manager/content_search/: builder.rs  error_visitor.rs  execute.rs  mod.rs  visitor_core.rs  visitor_impl.rs
src/search/manager/core/: cleanup.rs  mod.rs  operations.rs  session.rs  spawn.rs  waiting.rs
src/search/manager/file_search/: builder.rs  execute.rs  mod.rs  pattern.rs
src/search/manager/file_search/visitor/: buffering.rs  errors.rs  matching.rs  mod.rs  visit_impl.rs
src/search/manager/files_mode/: execute.rs  mod.rs  tests.rs  visitor.rs  visitor_builder.rs
src/search/rg/: haystack.rs  json_output.rs  mod.rs  search.rs
src/search/rg/flags/: config.rs  hiargs.rs  lowargs.rs  mod.rs  parse.rs
src/search/rg/flags/complete/: bash.rs  fish.rs  powershell.rs
src/search/rg/flags/defs/: filter.rs  input.rs  logging.rs  mod.rs  other_behaviors.rs  output.rs  output_modes.rs  search.rs
src/search/rg/flags/defs/filter/: mod.rs
src/search/rg/flags/defs/output/: color_flags.rs  context_flags.rs  display_flags.rs  help_flag.rs  limit_flags.rs  mod.rs  output_mode_flags.rs  separator_flags.rs
src/search/rg/flags/defs/search/: case_and_pattern_flags.rs  encoding_unicode_flags.rs  engine_flags.rs  limit_and_performance_flags.rs  mod.rs  (+1 more)
src/search/rg/flags/hiargs/: builders.rs  helpers.rs  matchers.rs  tests.rs  types.rs
src/search/tests/: binary_mode_tests.rs  boundary_tests.rs  integration_tests.rs  mod.rs
src/search/tests/fixtures/binary_modes/: data_with_nulls.csv
task/: 001-race-condition-uuid-collision.md  002-recursive-boxed-futures-stack-risk.md  003-hot-path-string-allocation.md  004-error-tracking-toctou-race.md  005-path-normalization-overhead.md  006-drop-panic-safety.md  007-atomic-ordering-performance.md  008-timeout-monitoring-race.md  009-canonicalize-silent-failure.md  010-preprocessor-contract-violation.md  011-json-buffer-allocation.md  012-lock-contention-during-sort.md  013-missing-cancellation-checks.md  README.md
tests/: content_search_regex_validation.rs  rg_flags_tests.rs  test_manager_files_mode.rs  test_no_ignore_flag.rs  test_rg_flags_hiargs.rs  test_search_binary_mode.rs  test_search_integration.rs  test_search_sorting.rs
tests/fixtures/binary_modes/: data_with_nulls.csv  normal.txt
tests/search/: test_binary_mode.rs  test_boundary.rs  test_sorting.rs
tests/search/rg/flags/defs/: test_other_behaviors.rs  test_output_modes.rs
(+6 files in other folders)
